[project]
name = "langchain-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.3",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.7",
    "python-dotenv>=1.1.0",
]
